<resources>
    <string name="app_name">Qiita Browser Sample for Espresso</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="items_list">Articles</string>
    <string name="local_faved">Local Favorites</string>
</resources>
