...
            android:paddingEnd="@dimen/list_item_horizontal_padding"
            app:imageUrl="@{favableQiitaItem.profileImageUrl}"
            app:srcCompat="@mipmap/ic_launcher" />


        <CheckBox
            android:id="@+id/checkbox_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/list_item_text_padding"
            android:paddingEnd="@dimen/list_item_text_padding"
...
